<resources>
    <string name="app_name">Lockband</string>
    //blocked apps list
    <string name="app_list_element_desc">Installed app\'s icon</string>
    <string name="app_list_element_name">Installed app\'s name</string>
    //bottom menu
    <string name="menu_settings">Settings</string>
    <string name="menu_band">Band</string>
    <string name="menu_stats">Statistics</string>
    //unlock activity
    <string name="pass_error">Wrong password. Try again…</string>
    <string name="password">Password</string>
    <string name="confirm_password_button">Confirm password</string>
    //test
    <string name="lock_test">lock test</string>
    //change password
    <string name="password_old">Old password</string>
    <string name="password_new">New password</string>
    <string name="password_repeat">Repeat new password</string>
    <string name="password_repeat_error">Passwords don\'t match</string>
    //set-up password
    <string name="password_setup">Set password</string>
    //pairing
    <string name="device_tmp">Device to pair</string>
    <string name="scan_for_devices">Scan for devices</string>
    <string name="pairing_scan_stop">Stop scan</string>
    //band info
    <string name="band_info">About MiBand</string>
    <string name="serial_number">Serial number</string>
    <string name="hardware_revision">Hardware revision</string>
    <string name="software_revision">Software revision</string>
    <string name="battery_info">Battery level</string>
    <string name="percent_placeholder">%1$d percent</string>
    //stats
    <string name="steps_label">Steps</string>
    <string name="steps_band_label">MiBand</string>
    <string name="steps_phone_label">Smartphone</string>
    <string name="hr_label">Heart Rate</string>
    <string name="bpm_placeholder">%1$d bpm</string>
</resources>
