<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/old_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/password_old"
            android:ems="10"
            android:hint="@string/password_old"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_upper"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/new_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/password_new"
            android:ems="10"
            android:hint="@string/password_new"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_middle"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/pass_repeated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/password_repeat"
            android:ems="10"
            android:hint="@string/password_repeat"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_bottom"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/change_pass_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/confirm_password_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_button"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/outline_login_black_18dp" />

        <TextView
            android:id="@+id/old_pass_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/password_old"
            android:textColor="@color/design_default_color_primary_dark"
            app:layout_constraintBottom_toTopOf="@+id/old_pass"
            app:layout_constraintEnd_toEndOf="@+id/old_pass"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/old_pass" />

        <TextView
            android:id="@+id/new_pass_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/password_new"
            android:textColor="@color/design_default_color_primary_dark"
            app:layout_constraintBottom_toTopOf="@+id/new_pass"
            app:layout_constraintEnd_toEndOf="@+id/new_pass"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/new_pass" />

        <TextView
            android:id="@+id/repeat_pass_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/password_repeat"
            android:textColor="@color/design_default_color_primary_dark"
            app:layout_constraintBottom_toTopOf="@+id/pass_repeated"
            app:layout_constraintEnd_toEndOf="@+id/pass_repeated"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/pass_repeated" />

        <TextView
            android:id="@+id/wrong_old_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass_error"
            android:textColor="@color/design_default_color_error"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/old_pass"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/old_pass"
            app:layout_constraintTop_toBottomOf="@+id/old_pass" />

        <TextView
            android:id="@+id/passwords_matching_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_repeat_error"
            android:textColor="@color/design_default_color_error"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/pass_repeated"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/pass_repeated"
            app:layout_constraintTop_toBottomOf="@+id/pass_repeated" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_upper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
