<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline25percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline75percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.75" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline50percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/steps_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/steps_label"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline25percent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/steps_header2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hr_label"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline75percent"
            app:layout_constraintEnd_toStartOf="@+id/guideline50vertical"
            app:layout_constraintStart_toStartOf="@+id/guideline50vertical"
            app:layout_constraintTop_toTopOf="@+id/guideline50percent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/steps_band_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/steps_band_label"
            android:textColor="@color/design_default_color_primary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline50percent"
            app:layout_constraintEnd_toStartOf="@+id/guideline50vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline25percent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/steps_phone_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/steps_phone_label"
            android:textColor="@color/design_default_color_primary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline50percent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline50vertical"
            app:layout_constraintTop_toTopOf="@+id/guideline25percent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline50vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/steps_band_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/steps_label"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline50percent"
            app:layout_constraintEnd_toStartOf="@+id/guideline50vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/steps_band_header"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/steps_phone_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/steps_label"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline50percent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline50vertical"
            app:layout_constraintTop_toBottomOf="@+id/steps_phone_header"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/hr_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hr_label"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline75percent"
            app:layout_constraintEnd_toStartOf="@+id/guideline50vertical"
            app:layout_constraintStart_toStartOf="@+id/guideline50vertical"
            app:layout_constraintTop_toBottomOf="@+id/steps_header2"
            app:layout_constraintVertical_bias="0.1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>